--- a/src/assets/pages/receipt/receipt/Receipt.scss
+++ b/src/assets/pages/receipt/receipt/Receipt.scss
@@ -30,6 +30,10 @@
             margin: 0;
             font-family: getFont('cursive');
         }
+
+        & div {
+            font-size: getFontSize('standard');
+        }
     }
 
     & .item-list {
@@ -82,6 +86,7 @@
     & .total {
         display: flex;
         justify-content: end;
+        gap: 5px;
 
         & .amount {
             font-weight: bold;
